--- a/TFJ2.ipynb
+++ b/TFJ2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fb47ff",
+   "id": "dde79e11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0beab361",
+   "id": "2814b1fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a84efe06",
+   "id": "ac39889c",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9285ad91",
+   "id": "1d355209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cf591d3f",
+   "id": "938c8bf6",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41b3aee2",
+   "id": "554011f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65aba78f",
+   "id": "c91f51a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d7aae68",
+   "id": "ee6ca69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,10 +104,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be710e04",
+   "id": "a2342bd4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Adam helped me! The second change "
+   ]
   }
  ],
  "metadata": {
